[tool.poetry]
name = "blsa"
version = "0.1.0"
description = ""
authors = ["Tyler Jowers <jowerstc@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
face-recognition = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
blsa = "blsa:main"
